--- a/conf/supervisor_celery_beat.ini
+++ b/conf/supervisor_celery_beat.ini
@@ -1,4 +1,4 @@
-[program:celery_worker]
+[program:celery_beat]
 command=/data/xsadmin_project/env/bin/celery -A xsadmin beat -l info
 directory=/data/xsadmin_project/xsadmin
 user=root
