--- a/conf/supervisor_uwsgi_xsadmin.ini
+++ b/conf/supervisor_uwsgi_xsadmin.ini
@@ -1,4 +1,4 @@
-[program:xsadmin]
+[program:uwsgi_xsadmin]
 command=/data/xsadmin_project/env/bin/uwsgi --ini uwsgi.ini
 directory=/data/xsadmin_project/xsadmin
 startsecs=0
